--- a/examples/generic.html
+++ b/examples/generic.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 		<title>LDT Generic Syntax Highlighter Demo</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="../lib/TextareaDecorator.css">
+		<link rel="stylesheet" type="text/css" href="../ldt.css">
 		<style>
 			/* highlight styles */
 			.ldt .comment { color: silver; }
@@ -14,9 +14,9 @@
 			.ldt .variable { color: cyan; }
 			.ldt .define { color: blue; }
 		</style>
-		<script src="../lib/Parser.js" type="text/javascript"></script>
-		<script src="../lib/TextareaDecorator.js" type="text/javascript"></script>
-		<script type="text/javascript">
+		<script type="module">
+			import {TextareaDecorator, Parser} from '../ldt.js';
+
 			// get element shortcut
 			function $(e){ return document.getElementById(e); };
 			// generic syntax parser
