--- a/examples/roygbiv.html
+++ b/examples/roygbiv.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 		<title>LDT ROYGBIV Demo</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="../lib/TextareaDecorator.css">
+		<link rel="stylesheet" type="text/css" href="../ldt.css">
 		<style>
 			/* highlight styles */
 			.ldt .red { color: red; }
@@ -15,9 +15,9 @@
 			.ldt .indigo { color: indigo; }
 			.ldt .violet { color: violet; }
 		</style>
-		<script src="../lib/Parser.js" type="text/javascript"></script>
-		<script src="../lib/TextareaDecorator.js" type="text/javascript"></script>
-		<script type="text/javascript">
+		<script type="module">
+			import {TextareaDecorator, Parser} from '../ldt.js';
+
 			// get element shortcut
 			function $(e){ return document.getElementById(e); };
 			// create the parser, case insensitive
