--- a/examples/wysiwyg.html
+++ b/examples/wysiwyg.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 		<title>LDT WYSIWYG Demo</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="../lib/TextareaDecorator.css">
+		<link rel="stylesheet" type="text/css" href="../ldt.css">
 		<style>
 			/* highlight styles */
 			.ldt .bold { font-weight: bold; }
@@ -13,9 +13,8 @@
 			.ldt .strike { text-decoration: line-through; }
 			.ldt .wavy { text-decoration: underline red wavy; }
 		</style>
-		<script src="../lib/Parser.js" type="text/javascript"></script>
-		<script src="../lib/TextareaDecorator.js" type="text/javascript"></script>
-		<script type="text/javascript">
+		<script type="module">
+			import {TextareaDecorator, Parser} from '../ldt.js';
 			// get element shortcut
 			function $(e){ return document.getElementById(e); };
 			// create the parser, quote names with more than one class
